Updating files to change scraping methodology to visit each link, grab the jpg file and update accordingly

--- a/challenge/Mission_to_Mars_Challenge.ipynb
+++ b/challenge/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -27,9 +27,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 91.0.4472\n",
       "Get LATEST driver version for 91.0.4472\n",
-      "Get LATEST driver version for 91.0.4472\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/91.0.4472.101/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\natas\\.wdm\\drivers\\chromedriver\\win32\\91.0.4472.101]\n"
+      "Driver [C:\\Users\\natas\\.wdm\\drivers\\chromedriver\\win32\\91.0.4472.101\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -675,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,52 +709,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "## 3b. Loop through the list to scrape the specific data points into a dictionary which is added to the list created earlier\n",
-    "for url in urls:\n",
-    "    rel_url = url.find('img', class_='thumb').get('src')\n",
-    "    title = url.find('h3').text\n",
-    "    \n",
-    "    img_url = f'https://marshemispheres.com/{rel_url}'\n",
-    "    \n",
+    "for url in range(len(urls)):\n",
+    "    browser.find_by_css('a.product-item img')[url].click()\n",
+    "    sample_elem = browser.links.find_by_text('Sample').first\n",
+    "    img_url = sample_elem['href']\n",
+    "    title = browser.find_by_css(\"h2.title\").text\n",
     "    hemisphere_image_urls.append ({\"img_url\": img_url,\n",
-    "                                  \"title\": title})"
+    "                                        \"title\": title})\n",
+    "    browser.back()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'img_url': 'https://marshemispheres.com/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png',\n",
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
        "  'title': 'Cerberus Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png',\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
        "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png',\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
        "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png',\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 4. Print the list that holds the dictionary of each image url and title.\n",
     "hemisphere_image_urls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
